cilium/cilium/backend-to-frontend-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backend-to-frontend-inbound
  namespace: secure-app
spec:
  endpointSelector:
    matchLabels:
      run: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        run: frontend
