cilium/cilium/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: secure-app
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
